Added back-compatibility with Java 8
Removed instances of method Java.util.List.getFirst() and switch-case arrow notation (->) and replaced with Java 8 version